--- a/quagga-0.99.24.1/ospf6d/Makefile.in
+++ b/quagga-0.99.24.1/ospf6d/Makefile.in
@@ -274,6 +274,7 @@ LATEXMK = @LATEXMK@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBCAP = @LIBCAP@
+LIBHIREDIS = @LIBHIREDIS@
 LIBM = @LIBM@
 LIBOBJS = @LIBOBJS@
 LIBPAM = @LIBPAM@
