--- a/quagga-0.99.24.1/lib/Makefile.in
+++ b/quagga-0.99.24.1/lib/Makefile.in
@@ -253,6 +253,7 @@ LATEXMK = @LATEXMK@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBCAP = @LIBCAP@
+LIBHIREDIS = @LIBHIREDIS@
 LIBM = @LIBM@
 LIBOBJS = @LIBOBJS@
 LIBPAM = @LIBPAM@
