--- a/quagga-0.99.24.1/m4/Makefile.in
+++ b/quagga-0.99.24.1/m4/Makefile.in
@@ -164,6 +164,7 @@ LATEXMK = @LATEXMK@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBCAP = @LIBCAP@
+LIBHIREDIS = @LIBHIREDIS@
 LIBM = @LIBM@
 LIBOBJS = @LIBOBJS@
 LIBPAM = @LIBPAM@
