--- a/quagga-0.99.24.1/bgpd/Makefile.in
+++ b/quagga-0.99.24.1/bgpd/Makefile.in
@@ -388,7 +388,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I.. -I$(top_srcdir) -I$(top_srcdir)/lib -I$(top_builddir)/lib
 INSTALL_SDATA = @INSTALL@ -m 600
-AM_CFLAGS = $(PICFLAGS)
+AM_CFLAGS = $(PICFLAGS) -g -O0
 AM_LDFLAGS = $(PILDFLAGS) 
 noinst_LIBRARIES = libbgp.a
 libbgp_a_SOURCES = \
