--- a/quagga-0.99.24.1/config.h.in
+++ b/quagga-0.99.24.1/config.h.in
@@ -635,6 +635,9 @@
 /* Define to the sub-directory where libtool stores uninstalled libraries. */
 #undef LT_OBJDIR
 
+/* Define to 1 if your C compiler doesn't accept -c and -o together. */
+#undef NO_MINUS_C_MINUS_O
+
 /* OpenBSD */
 #undef OPEN_BSD
 
@@ -812,11 +815,6 @@
 
 /* zebra vty socket */
 #undef ZEBRA_VTYSH_PATH
-
-/* Enable large inode numbers on Mac OS X 10.5.  */
-#ifndef _DARWIN_USE_64_BIT_INODE
-# define _DARWIN_USE_64_BIT_INODE 1
-#endif
 
 /* Number of bits in a file offset, on hosts where this is settable. */
 #undef _FILE_OFFSET_BITS
