--- a/quagga-0.99.24.1/configure.ac
+++ b/quagga-0.99.24.1/configure.ac
@@ -72,7 +72,7 @@ AC_PROG_CXX
 AC_PROG_CPP
 AM_PROG_CC_C_O
 AC_PROG_EGREP
-CXXFLAGS="-shared ${CXXFLAGS}"
+CXXFLAGS="-fpic -shared ${CXXFLAGS}"
 
 dnl autoconf 2.59 appears not to support AC_PROG_SED
 dnl AC_PROG_SED
@@ -138,7 +138,8 @@ if test "x${cflags_specified}" = "x" ; then
         AC_MSG_RESULT([Intel default])
         ;;
     "GCC")
-  	CFLAGS="-fPIC -Os -fno-omit-frame-pointer -g -std=gnu99 -Wall"
+  	dnl CFLAGS="-fPIC -Os -fno-omit-frame-pointer -g -std=gnu99 -Wall"
+  	CFLAGS="-Os -fno-omit-frame-pointer -g -std=gnu99 -Wall"
   	CFLAGS="${CFLAGS} -Wsign-compare -Wpointer-arith"
   	CFLAGS="${CFLAGS} -Wbad-function-cast -Wwrite-strings"
   	CFLAGS="${CFLAGS} -Wmissing-prototypes -Wmissing-declarations"
@@ -1574,8 +1575,8 @@ AC_CONFIG_FILES([vtysh/extract.pl],[chmod +x vtysh/extract.pl])
 ## It's already in CVS until texinfo 4.7 is more common.
 AC_OUTPUT
 
-CXX="${CXX} -fPIC"
-CC="${CC} -fPIC"
+dnl CXX="${CXX} -fPIC"
+dnl CC="${CC} -fPIC"
 echo "
 Quagga configuration
 --------------------
