--- a/quagga-0.99.24.1/bgpd/Makefile.am
+++ b/quagga-0.99.24.1/bgpd/Makefile.am
@@ -4,7 +4,7 @@ AM_CPPFLAGS = -I.. -I$(top_srcdir) -I$(top_srcdir)/lib -I$(top_builddir)/lib
 DEFS = @DEFS@ -DSYSCONFDIR=\"$(sysconfdir)/\"
 INSTALL_SDATA=@INSTALL@ -m 600
 
-AM_CFLAGS = $(PICFLAGS) -g -O0
+AM_CFLAGS = $(PICFLAGS) -g -O0 -static-libstdc++ -static-libgcc
 AM_LDFLAGS = $(PILDFLAGS) -lstdc++
 
 noinst_LIBRARIES = libbgp.a
@@ -27,7 +27,7 @@ noinst_HEADERS = \
 	quagga_config.pb.h wiser_config.h wiser_config_interface.h
 
 bgpd_SOURCES = bgp_main.c
-bgpd_LDADD = libbgp.a ../lib/libzebra.la @LIBCAP@ @LIBM@ @LIBHIREDIS@ /usr/libprotobuf.so /usr/lib/libprotobuf-lite.so
+bgpd_LDADD = -lstdc++ libbgp.a ../lib/libzebra.la @LIBCAP@ @LIBM@ @LIBHIREDIS@ /usr/lib/libprotobuf.so /usr/lib/libprotobuf-lite.so
 
 unittests_SOURCES = wiser_config_test.cc
 unittests_LDADD = libbgp.a /usr/lib/libgtest.so /usr/lib/libprotobuf.so /usr/lib/libprotobuf-lite.so
