--- a/quagga-0.99.24.1/config.h.in
+++ b/quagga-0.99.24.1/config.h.in
@@ -181,6 +181,9 @@
 /* Define to 1 if you have the `socket' library (-lsocket). */
 #undef HAVE_LIBSOCKET
 
+/* we have libstdc++ */
+#undef HAVE_LIBSTDC__
+
 /* Define to 1 if you have the `umem' library (-lumem). */
 #undef HAVE_LIBUMEM
 
@@ -632,7 +635,8 @@
    slash. */
 #undef LSTAT_FOLLOWS_SLASHED_SYMLINK
 
-/* Define to the sub-directory where libtool stores uninstalled libraries. */
+/* Define to the sub-directory in which libtool stores uninstalled libraries.
+   */
 #undef LT_OBJDIR
 
 /* Define to 1 if your C compiler doesn't accept -c and -o together. */
