--- a/quagga-0.99.24.1/bgpd/Makefile.am
+++ b/quagga-0.99.24.1/bgpd/Makefile.am
@@ -17,7 +17,7 @@ libbgp_a_SOURCES = \
 	bgp_dump.c bgp_snmp.c bgp_ecommunity.c bgp_mplsvpn.c bgp_nexthop.c \
 	bgp_damp.c bgp_table.c bgp_advertise.c bgp_vty.c bgp_mpath.c dbgp_lookup.c \
 	dbgp.c quagga_config.pb.cc wiser_config.cc wiser_config_interface.cpp \
-	wiser.c 
+	wiser.c bgp_common.c
 
 noinst_HEADERS = \
 	bgp_aspath.h bgp_attr.h bgp_community.h bgp_debug.h bgp_fsm.h \
@@ -26,7 +26,7 @@ noinst_HEADERS = \
 	bgp_ecommunity.h bgp_mplsvpn.h bgp_nexthop.h bgp_damp.h bgp_table.h \
 	bgp_advertise.h bgp_snmp.h bgp_vty.h bgp_mpath.h dbgp_lookup.h \
 	dbgp.h quagga_config.pb.h wiser_config.h wiser_config_interface.h \
-	wiser.h
+	wiser.h bgp_common.h
 
 bgpd_SOURCES = bgp_main.c
 bgpd_LDADD = libbgp.a ../lib/libzebra.la @LIBCAP@ @LIBM@ @LIBHIREDIS@ @PROTOBUF_LIBS@ @libstdcxx_LIBS@ 
