Almost completed with adding IA functionality for Wiser.  Just need to rework 'ComputeWiserDecision'

--- a/quagga-0.99.24.1/bgpd/Makefile.am
+++ b/quagga-0.99.24.1/bgpd/Makefile.am
@@ -16,7 +16,8 @@ libbgp_a_SOURCES = bgpd.c bgp_fsm.c bgp_aspath.c bgp_community.c bgp_attr.c		\
 	bgp_ecommunity.c bgp_mplsvpn.c bgp_nexthop.c bgp_damp.c bgp_table.c					\
 	bgp_advertise.c bgp_vty.c bgp_mpath.c dbgp_lookup.c dbgp.c									\
 	quagga_config.pb.cc wiser_config.cc wiser_config_interface.cpp wiser.c			\
-	bgp_common.c general_configuration.cpp integrated_advertisement.pb.cc
+	bgp_common.c general_configuration.cpp integrated_advertisement.pb.cc				\
+	integrated_advertisement_functions.cpp
 
 noinst_HEADERS = bgp_aspath.h bgp_attr.h bgp_community.h bgp_debug.h bgp_fsm.h	\
 	bgp_network.h bgp_open.h bgp_packet.h bgp_regex.h bgp_route.h bgpd.h					\
@@ -24,7 +25,8 @@ noinst_HEADERS = bgp_aspath.h bgp_attr.h bgp_community.h bgp_debug.h bgp_fsm.h	\
 	bgp_mplsvpn.h bgp_nexthop.h bgp_damp.h bgp_table.h bgp_advertise.h bgp_snmp.h	\
 	bgp_vty.h bgp_mpath.h dbgp_lookup.h dbgp.h quagga_config.pb.h wiser_config.h	\
 	wiser_config_interface.h wiser.h bgp_common.h general_configuration.h					\
-	shared_enum_definitions.h integrated_advertisement.pb.cc
+	shared_enum_definitions.h integrated_advertisement.pb.cc											\
+	integrated_advertisement_functions.h
 
 bgpd_SOURCES = bgp_main.c
 bgpd_LDADD = libbgp.a ../lib/libzebra.la @LIBCAP@ @LIBM@ @LIBHIREDIS@ @PROTOBUF_LIBS@ @libstdcxx_LIBS@ 
