Adding Protobuf config functionality to quagga

--- a/quagga-0.99.24.1/bgpd/Makefile.am
+++ b/quagga-0.99.24.1/bgpd/Makefile.am
@@ -26,7 +26,7 @@ noinst_HEADERS = bgp_aspath.h bgp_attr.h bgp_community.h bgp_debug.h bgp_fsm.h	\
 	bgp_vty.h bgp_mpath.h dbgp_lookup.h dbgp.h quagga_config.pb.h wiser_config.h	\
 	wiser_config_interface.h wiser.h bgp_common.h general_configuration.h					\
 	shared_enum_definitions.h integrated_advertisement.pb.cc											\
-	integrated_advertisement_functions.h pathlets.h
+	integrated_advertisement_functions.h pathlets.h pathlet_config.h
 
 bgpd_SOURCES = bgp_main.c
 bgpd_LDADD = libbgp.a ../lib/libzebra.la @LIBCAP@ @LIBM@ @LIBHIREDIS@ @PROTOBUF_LIBS@ @libstdcxx_LIBS@ 
