--- a/quagga-0.99.24.1/bgpd/Makefile.am
+++ b/quagga-0.99.24.1/bgpd/Makefile.am
@@ -10,14 +10,14 @@ AM_LDFLAGS = $(PILDFLAGS)
 noinst_LIBRARIES = libbgp.a
 sbin_PROGRAMS = bgpd unittests
 
-libbgp_a_SOURCES = bgpd.c bgp_fsm.c bgp_aspath.c bgp_community.c bgp_attr.c		\
-	bgp_debug.c bgp_route.c bgp_zebra.c bgp_open.c bgp_routemap.c bgp_packet.c	\
-	bgp_network.c bgp_filter.c bgp_regex.c bgp_clist.c bgp_dump.c bgp_snmp.c		\
-	bgp_ecommunity.c bgp_mplsvpn.c bgp_nexthop.c bgp_damp.c bgp_table.c					\
-	bgp_advertise.c bgp_vty.c bgp_mpath.c dbgp_lookup.c dbgp.c									\
-	quagga_config.pb.cc wiser_config.cc wiser_config_interface.cpp wiser.c			\
-	bgp_common.c general_configuration.cpp integrated_advertisement.pb.cc				\
-	integrated_advertisement_functions.cpp pathlet_internal_state.cpp
+libbgp_a_SOURCES = bgpd.c bgp_fsm.c bgp_aspath.c bgp_community.c bgp_attr.c			\
+	bgp_debug.c bgp_route.c bgp_zebra.c bgp_open.c bgp_routemap.c bgp_packet.c		\
+	bgp_network.c bgp_filter.c bgp_regex.c bgp_clist.c bgp_dump.c bgp_snmp.c			\
+	bgp_ecommunity.c bgp_mplsvpn.c bgp_nexthop.c bgp_damp.c bgp_table.c						\
+	bgp_advertise.c bgp_vty.c bgp_mpath.c dbgp_lookup.c dbgp.c										\
+	quagga_config.pb.cc wiser_config.cc wiser_config_interface.cpp wiser.c				\
+	bgp_common.c general_configuration.cpp integrated_advertisement.pb.cc					\
+	integrated_advertisement_functions.cpp pathlet_internal_state.cpp pathlets.c
 
 noinst_HEADERS = bgp_aspath.h bgp_attr.h bgp_community.h bgp_debug.h bgp_fsm.h	\
 	bgp_network.h bgp_open.h bgp_packet.h bgp_regex.h bgp_route.h bgpd.h					\
@@ -26,7 +26,8 @@ noinst_HEADERS = bgp_aspath.h bgp_attr.h bgp_community.h bgp_debug.h bgp_fsm.h	\
 	bgp_vty.h bgp_mpath.h dbgp_lookup.h dbgp.h quagga_config.pb.h wiser_config.h	\
 	wiser_config_interface.h wiser.h bgp_common.h general_configuration.h					\
 	shared_enum_definitions.h integrated_advertisement.pb.cc											\
-	integrated_advertisement_functions.h pathlet_internal_state.h pathlet_config.h
+	integrated_advertisement_functions.h pathlet_internal_state.h									\
+	pathlet_config.h pathlets.h
 
 bgpd_SOURCES = bgp_main.c
 bgpd_LDADD = libbgp.a ../lib/libzebra.la @LIBCAP@ @LIBM@ @LIBHIREDIS@ @PROTOBUF_LIBS@ @libstdcxx_LIBS@ 
